--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Halloween Card</title>
     
     <script>
-        function changeBG (color){
+        function changeBG (href){
             document.body.style.background = color;
             }
     </script>
@@ -23,12 +23,8 @@
         <h1>Happy Halloween</h1>
         <p>Hope you have a good time trick or treating</p>
         <img src="download (4).jpeg">
-        <br>
-        <button type = "button" onclick="changeBG('#202124');">Black
-            </button>
-        <button type = "button" 
-            onclick="changeBG('#E37400');">Orange
-            </button>
         <br><br>
-        <a href="Halloweenbody.html" target="_blank">OPEN</a>
+        <a href="Halloweenbody.html" target="_blank">
+            <button>Open</button>
+            </a>
     </body>
