--- a/Halloweenbody.html
+++ b/Halloweenbody.html
@@ -12,7 +12,7 @@
             background-color: #E37400;
             margin-left: 20%;
             margin-right: 20%;
-            border: 8px dashed black;
+            border: 8px dotted black;
             padding: 25px 25px 25px 60px;
             font-size: 20px
             font-color: #E37400
@@ -20,7 +20,14 @@
     </head>
     <body style="background-color: #E37400">
         <h1>Happy Halloween</h1>
-        <p>Pumpkins are Orange Witches are green I know it is in a month away but happy Halloween</p>
-        <img src="images (3).jpeg">
+        <p>Pumpkins are Orange</p>
+        <p>Witches are green</p>
+        <p>Can I have some of your candy</p>
+        <p>That you'll get on Halloween</p>
+        <img src="candy-sweets.gif">
+        <br>
+        <a href="Index.html" target="_blank">
+            <button>Back</button>
+            </a>
     </body>
 </html>
