--- a/Halloweenbody.html
+++ b/Halloweenbody.html
@@ -25,9 +25,6 @@
         <p>Can I have some of your candy</p>
         <p>That you'll get on Halloween</p>
         <img src="candy-sweets.gif">
-        <br>
-        <a href="Index.html" target="_blank">
-            <button>Back</button>
-            </a>
+        <br>        <button type="button"onclick="document.location='Index.html' ">Back</button>
     </body>
 </html>
