--- a/index.html
+++ b/index.html
@@ -24,7 +24,5 @@
         <p>Hope you have a good time trick or treating</p>
         <img src="download (4).jpeg">
         <br><br>
-        <a href="Halloweenbody.html" target="_blank">
-            <button>Open</button>
-            </a>
+        <button type="button"onclick="document.location='Halloweenbody.html' ">Back</button>
     </body>
