--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
         <p>Hope you have a good time trick or treating</p>
         <img src="download (4).jpeg">
         <br><br>
-        <button type="button"onclick="document.location='Halloweenbody.html' ">Back</button>
+                <a href="https://Halloweenbody.html" target="_blank"> <button>Open</button></a>
     </body>
+</html>
+    
+    /html>
