--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
         <p>Hope you have a good time trick or treating</p>
         <img src="download (4).jpeg">
         <br><br>
-                <a href="https://Halloweenbody.html" target="_blank"> <button>Open</button></a>
+                <a href="Halloweenbody.html" target="_blank"> <button>Open</button></a>
     </body>
 </html>
