--- a/Halloweenbody.html
+++ b/Halloweenbody.html
@@ -25,7 +25,8 @@
         <p>Can I have some of your candy</p>
         <p>That you'll get on Halloween</p>
         <img src="candy-sweets.gif">
-        <br>        
-        <button type="button"onclick="document.location='https://philip623-afk.github.io/Halloween-Card/' ">Back</button>
+        <br>
+                <a href="Halloweenbody.html" target="_blank"> <button>Open</button>
+                </a>
     </body>
 </html>
